--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,4 +1,4 @@
-<%= render PageComponent.new(title: t("devise.views.unlocks.new.title"), full_width: false) do %>
+<%= render SectionComponent.new(title: t("devise.views.unlocks.new.title"), full_width: false) do %>
   <%= render "devise/shared/oauth_links" %>
 
   <div class="divider"><%= t("devise.views.shared.links.oauth_separator") %></div>
