--- a/app/views/organizations/received_join_requests/index.html.erb
+++ b/app/views/organizations/received_join_requests/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= render "organizations/memberships/tabs", active_tab: :requests %>
 
-<%= render PageComponent.new do %>
+<%= render SectionComponent.new do %>
   <% if @join_requests.any? %>
     <div class="table-responsive">
       <table>
