--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title, t(".title") %>
 
-<%= render PageComponent.new(full_width: false) do |component| %>
+<%= render SectionComponent.new(full_width: false) do |component| %>
   <%= markdown_to_html(Rails.root.join("README.md").read) %>
 <% end %>
