--- a/app/views/users/invitation_acceptances/new.html.erb
+++ b/app/views/users/invitation_acceptances/new.html.erb
@@ -1,4 +1,4 @@
-<%= render PageComponent.new(title: t(".title"), full_width: false) do %>
+<%= render SectionComponent.new(title: t(".title"), full_width: false) do %>
   <%= simple_form_for @user, url: accept_user_invitation_create_path, method: :post, html: { class: "space-y-4" } do |f| %>
     <%= render "shared/errors", object: @user %>
 
