--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, @user.name %>
 
-<%= render PageComponent.new(full_width: false) do %>
+<%= render SectionComponent.new(full_width: false) do %>
   <%= render "shared/user_info", user: @user %>
 
   <div class="menu menu-xl w-full"><%= render "shared/user_links", user: @user %></div>
