--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <%= modal do %>
-  <%= render PageComponent.new(title: t("devise.views.registrations.new.title"), full_width: false) do %>
+  <%= render SectionComponent.new(title: t("devise.views.registrations.new.title"), full_width: false) do %>
     <%= render "devise/shared/oauth_links" %>
 
     <div class="divider"><%= t("devise.views.shared.links.oauth_separator") %></div>
