--- a/app/views/organizations/_tabs.html.erb
+++ b/app/views/organizations/_tabs.html.erb
@@ -23,7 +23,7 @@
      }
    ] %>
 
-<%= render PageComponent.new(title: t("shared.navigation.organizations")) do |component| %>
+<%= render SectionComponent.new(title: t("shared.navigation.organizations")) do |component| %>
   <% component.with_action_list do %>
     <%= link_to t("shared.actions.create"), new_organization_path, data: { turbo_frame: :modal }, class: "btn btn-primary" %>
   <% end %>
