--- a/app/views/organizations/dashboard/index.html.erb
+++ b/app/views/organizations/dashboard/index.html.erb
@@ -1,4 +1,4 @@
 <% content_for :title, t("organizations.dashboard.index.title") %>
 
-<%= render PageComponent.new(title: t("organizations.dashboard.index.title")) do |component| %>
+<%= render SectionComponent.new(title: t("organizations.dashboard.index.title")) do |component| %>
 <% end %>
