--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -1,10 +1,10 @@
 <% content_for :title, t("organizations.edit.title") %>
 
-<%= render PageComponent.new(title: t("organizations.edit.title"), full_width: false) do |component| %>
+<%= render SectionComponent.new(title: t("organizations.edit.title"), full_width: false) do |component| %>
   <%= render "form", organization: @organization %>
 <% end %>
 
-<%= render PageComponent.new(full_width: false) do %>
+<%= render SectionComponent.new(full_width: false) do %>
   <div class="divider"></div>
 
   <div class="flex items-center gap-2">
