--- a/app/views/organizations/memberships/_tabs.html.erb
+++ b/app/views/organizations/memberships/_tabs.html.erb
@@ -21,7 +21,7 @@
      }
    ] %>
 
-<%= render PageComponent.new(title: t("organizations.memberships.index.title")) do |component| %>
+<%= render SectionComponent.new(title: t("organizations.memberships.index.title")) do |component| %>
   <% component.with_action_list do %>
     <%= link_to t("organizations.memberships.new.title"), new_organization_sent_invitation_path(@organization), data: { turbo_frame: :modal }, class: "btn btn-primary" if policy(@organization.memberships.new).new? %>
   <% end %>
