--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title, t("organizations.show.title") %>
 
-<%= render PageComponent.new(full_width: false) do |component| %>
+<%= render SectionComponent.new(full_width: false) do |component| %>
   <%= render "organizations/table", organizations: [@organization] %>
 <% end %>
