--- a/app/views/users/organizations/sent_join_requests/index.html.erb
+++ b/app/views/users/organizations/sent_join_requests/index.html.erb
@@ -2,6 +2,6 @@
 
 <%= render "organizations/tabs", active_tab: :requests %>
 
-<%= render PageComponent.new do %>
+<%= render SectionComponent.new do %>
   <%= render "organizations/table", organizations: @organizations %>
 <% end %>
