--- a/lib/templates/erb/scaffold/edit.html.erb.tt
+++ b/lib/templates/erb/scaffold/edit.html.erb.tt
@@ -1,7 +1,7 @@
 <%% content_for :title, "Editing <%= human_name.downcase %>" %>
 
 <%%= modal do %>
-  <%%= render PageComponent.new(title: "Editing <%= human_name.downcase %>") do |component| %>
+  <%%= render SectionComponent.new(title: "Editing <%= human_name.downcase %>") do |component| %>
     <%%= render "form", <%= singular_table_name %>: @<%= singular_table_name %> %>
     <%%= link_to "Cancel", <%= model_resource_name(prefix: "@") %>, class: "btn btn-secondary" %>
   <%% end %>
