--- a/lib/templates/erb/scaffold/new.html.erb.tt
+++ b/lib/templates/erb/scaffold/new.html.erb.tt
@@ -1,7 +1,7 @@
 <%% content_for :title, "New <%= human_name.downcase %>" %>
 
 <%%= modal do %>
-  <%%= render PageComponent.new(title: "New <%= human_name.downcase %>") do |component| %>
+  <%%= render SectionComponent.new(title: "New <%= human_name.downcase %>") do |component| %>
     <%%= render "form", <%= singular_table_name %>: @<%= singular_table_name %> %>
     <%%= link_to "Cancel", <%= index_helper(type: :path) %>, class: "btn btn-secondary" %>
   <%% end %>
